# learning

blockchain/brownie/brownie_fundme/: brownie-config.yaml
blockchain/brownie/brownie_fundme/contracts/: FundMe.sol
blockchain/brownie/brownie_fundme/scripts/: deploy.py  helpers.py
blockchain/brownie/setup_stuff/: package-lock.json
blockchain/brownie/simple_storage_real/contracts/: SimpleStorage.sol
blockchain/web3.py/web3_simple_storage/: compiled.json  deploy.py
c++/aas/: a.cpp  a.out
c++/bazsi/1/: a.cpp  a.out  temp.cpp
c++/bazsi/2/: input.cpp
c++/unix-tools/cat/: cat.cpp  run
c++/unix-tools/ls/: a.out  ls.cpp  run
js/: index.html
js/a/: index.js  run.sh
js/firesship-facebook-like/dropdown-menus/: package-lock.json  package.json
kiwi/th/: a.py  b.py  main.py
php/unserialise/: attack.php  code.php  exploit.sh  logging.php  notes.md  pwn.php
pywebscrape/: index.html  links.list  main.py
rendering/sdl_intro/: main.cpp
rendering_c++/sdl2/: notes.md
rendering_c++/sdl2/OOP/: CMakeLists.txt  main.cpp
rendering_c++/sdl2/assets/: main.cpp  notes.md
rendering_c++/sdl2/demo/: main.cpp
rendering_c++/sdl2/movement/: main.cpp  notes.md
rendering_c++/sdl2/objects/: main.cpp
rendering_c++/sdl2/screensaver/: main.cpp
rendering_c++/sdl_intro/: CMakeLists.txt  notes.md
rendering_c++/sdl_intro/objects/: notes.md
rust/guessing_game/: Cargo.toml
rust/guessing_game/src/: main.rs
rust/hello_cargo/: Cargo.toml
rust/hello_cargo/src/: main.rs
rust/ownership/: Cargo.toml
rust/ownership/src/: main.rs
sql/work/: create-databases.sql
(+6 files in other folders)
